--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.security.user.name=admin
 spring.security.user.password=admin123
 
 logging.level.org.springframework.security=DEBUG
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
