--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=job_portal_backend
 spring.datasource.url=jdbc:postgresql://localhost:5432/job_portal
 spring.datasource.username=postgres
-spring.datasource.password=meryem123
+spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
