--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.security.user.password=admin123
 logging.level.org.springframework.security=DEBUG
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
 
+# Swagger UI disponible sur : http://localhost:8080/swagger-ui/index.html
+springdoc.swagger-ui.path=/swagger-ui.html
+
+
+
+
